# libKDU

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
ResourceGenerator/: ResourceGenerator.cpp  trim.h
override/: kdu_override.cpp  kdu_override.h
public/: libKDU.cpp  libKDU.h
